# spyre-inference

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md
docs/contributing/: README.md
docs/vllm-spyre-next/: README.md
docs/vllm-spyre-next/contributing/: README.md
docs/vllm-spyre-next/getting_started/: installation.md
spyre_inference/: __init__.py  platform.py
spyre_inference/custom_ops/: __init__.py  linear.py  parallel_lm_head.py  rms_norm.py  silu_and_mul.py  vocab_parallel_embedding.py
spyre_inference/testing/: models.py  pytest_plugin.py  upstream_tests.yaml
spyre_inference/v1/: __init__.py
spyre_inference/v1/attention/backends/: spyre_attn.py
spyre_inference/v1/core/: scheduler.py
spyre_inference/v1/worker/: spyre_model_runner.py  spyre_worker.py
tests/: conftest.py  test_rms_norm.py  test_spyre_attn.py  test_vllm_spyre_next.py
vllm_spyre_next/: platform.py
vllm_spyre_next/custom_ops/: __init__.py  linear.py  rms_norm.py  rotary_embedding.py  silu_and_mul.py  utils.py
vllm_spyre_next/v1/worker/: spyre_model_runner.py  spyre_worker.py
